2016-09-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (port_range_ranges): Check if parameter is
	null.

2016-09-09  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_server.h: Add format attribute so that format args are
	checked.

	* omp/omp.c (omp_get_report_ext): Add arg accidentally removed in r25040
	on 2016-04-21.

2016-09-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_get_name): New function.

	* base/nvticache.h: Add new function header.

2016-09-02  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_server.c (server_attach_internal): Downgrade warnings
	to debugs, to prevent excess log messages.
	(openvas_server_free): Same for gnutls_bye message.

2016-08-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_builtin_find_service.c: Removed some unused makro
	definitions.

2016-08-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_builtin_find_service.c,
	nasl/nasl_builtin_openvas_tcp_scanner.c,
	nasl/nasl_builtin_synscan.c: Remove an unneeded include.

2016-08-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_cert.c (nasl_cert_query): Add key-size command to get the
	public key size in bits.

2016-08-24  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl_var.c (free_array): Remove superfluous assignment of
	num_elt. It was wrongly introduced in SVN r20496, num_elt is already
	NULL at this point.

2016-08-22  Michael Meyer <michael.meyer@greenbone.net>

	* nasl/nasl_cert.c (get_oid_name):
	Added some algorithm names.

2016-08-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (recv_line): Check if the socket was closed by the
	sender.

2016-08-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_create_target_ext): Use a separate return for
	connection error.

2016-08-03  Hani Benhabiles <hani.benhabiles@greenbone.net>
